--- a/src/main/resources/templates/mainframe.html
+++ b/src/main/resources/templates/mainframe.html
@@ -43,7 +43,10 @@
                 </a>
                 <ul class="sidenav-second-level collapse" id="collapseComponents1">
                     <li>
-                        <a href="./locate/edit.html" th:href="@{~/locate/edit}">工作区设置</a>
+                        <a href="./locate/edit.html" th:href="@{~/locate/edit}">工作区列表</a>
+                    </li>
+                    <li>
+                        <a href="./locate/add.html" th:href="@{~/locate/add}">工作区添加</a>
                     </li>
                 </ul>
 
