--- a/src/main/resources/templates/locate/add.html
+++ b/src/main/resources/templates/locate/add.html
@@ -6,14 +6,41 @@
     <meta charset="UTF-8"/>
     <title>查看</title>
 
-    <link  href="https://cdn.bootcss.com/twitter-bootstrap/4.3.1/css/bootstrap.css" rel="stylesheet">
-    <link th:href="@{~/module/vendor/bootstrap/css/bootstrap.min.css}" href="../module/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link th:href="@{~/module/vendor/font-awesome/css/font-awesome.min.css}" href="../module/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link th:href="@{~/module/vendor/datatables/dataTables.bootstrap4.css}" href="../module/vendor/datatables/dataTables.bootstrap4.css" rel="stylesheet">
+    <link href="https://cdn.bootcss.com/twitter-bootstrap/4.3.1/css/bootstrap.css" rel="stylesheet">
+    <link th:href="@{~/module/vendor/bootstrap/css/bootstrap.min.css}"
+          href="../module/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link th:href="@{~/module/vendor/font-awesome/css/font-awesome.min.css}"
+          href="../module/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link th:href="@{~/module/vendor/datatables/dataTables.bootstrap4.css}"
+          href="../module/vendor/datatables/dataTables.bootstrap4.css" rel="stylesheet">
     <link th:href="@{~/module/css/sb-admin.css}" href="../module/css/sb-admin.css" rel="stylesheet">
 </head>
 
 <body class="fixed-nav sticky-footer bg-dark" id="page-top">
+
+<script type="text/javascript">
+    function saveLocate() {
+        var text = $("#top22").val();
+        if (text == '') {
+            alert('无内容！');
+            return;
+        }
+
+        $.ajax({
+            url: "/locate/save/top/" + text,
+            type: "get",
+            success: function (data) {
+                alert("添加成功！")
+                window.location.href = "/locate/add.html";
+                return;
+            },
+            error: function (data) {
+                alert("添加失败！")
+            }
+        })
+
+    };
+</script>
 <div th:include="mainframe :: common"></div>
 
 <div class="content-wrapper">
@@ -31,38 +58,14 @@
                 <div class="table-responsive">
                     <form action="/locate/edit" th:action="@{/locate}" method="POST" role="form">
                         <div class="form-group">
-                            <label for="address">
+                            <label for="top22">
                                 一级工作区：
                             </label>
-                            <select id="address" >
-                                <div th:each="topAddress : ${locateModel.topLocateList}">
-                                    <option name="top" th:text="${topAddress.address}"></option>
-                                </div>
-                            </select>
+                            <input type="text" class="form-group form-control" id="top22" placeholder="一级工作区">
+                            <a href="#" onclick="saveLocate()">添加</a>
 
                         </div>
-                        <div class="form-group">
-                            <label for="address">
-                                二级工作区：
-                            </label>
-                            <select id="address" >
-                                <div th:each="secondAddress : ${locateModel.secondLocateList}">
-                                    <option name="top" th:text="${secondAddress.address}"></option>
-                                </div>
-                            </select>
 
-                        </div>
-                        <div class="form-group">
-                            <label for="address">
-                                三级工作区：
-                            </label>
-                            <select id="address" >
-                                <div th:each="thirdAddress : ${locateModel.thirdLocateList}">
-                                    <option name="top" th:text="${thirdAddress.address}"></option>
-                                </div>
-                            </select>
-
-                        </div>
 
                         <div class="form-group">
                             <!--<input type="submit" value="提交" class="btn btn-primary">-->
@@ -70,7 +73,9 @@
                     </form>
                 </div>
             </div>
-            <div class="card-footer small text-muted" th:text="${#dates.format(new java.util.Date().getTime(), 'yyyy-MM-dd')}" >版权保留xjtuse</div>
+            <div class="card-footer small text-muted"
+                 th:text="${#dates.format(new java.util.Date().getTime(), 'yyyy-MM-dd')}">版权保留xjtuse
+            </div>
         </div>
     </div>
     <!-- /.container-fluid-->
@@ -86,7 +91,8 @@
         <i class="fa fa-angle-up"></i>
     </a>
     <!-- Logout Modal-->
-    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+         aria-hidden="true">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
@@ -105,11 +111,15 @@
     </div>
     <!-- Bootstrap core JavaScript-->
     <script th:src="@{~/module/vendor/jquery/jquery.min.js}" src="../module/vendor/jquery/jquery.min.js"></script>
-    <script th:src="@{~/module/vendor/bootstrap/js/bootstrap.bundle.min.js}" src="../module/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script th:src="@{~/module/vendor/jquery-easing/jquery-easing.min.js}" src="../module/vendor/jquery-easing/jquery.easing.min.js"></script>
+    <script th:src="@{~/module/vendor/bootstrap/js/bootstrap.bundle.min.js}"
+            src="../module/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script th:src="@{~/module/vendor/jquery-easing/jquery-easing.min.js}"
+            src="../module/vendor/jquery-easing/jquery.easing.min.js"></script>
     <script th:src="@{~/module/vendor/chart.js/Chart.min.js}" src="../module/vendor/chart.js/Chart.min.js"></script>
-    <script th:src="@{~/module/vendor/datatables/jquery.dataTables.js}" src="../module/vendor/datatables/jquery.dataTables.js"></script>
-    <script th:src="@{~/module/vendor/datatables/dataTables.bootstrap4.js}" src="../module/vendor/datatables/dataTables.bootstrap4.js"></script>
+    <script th:src="@{~/module/vendor/datatables/jquery.dataTables.js}"
+            src="../module/vendor/datatables/jquery.dataTables.js"></script>
+    <script th:src="@{~/module/vendor/datatables/dataTables.bootstrap4.js}"
+            src="../module/vendor/datatables/dataTables.bootstrap4.js"></script>
     <script th:src="@{~/module/js/sb-admin.min.js}" src="../module/js/sb-admin.min.js"></script>
     <script th:src="@{~/module/js/sb-admin-datatables.min.js}" src="../module/js/sb-admin-datatables.min.js"></script>
     <script th:src="@{~/module/js/sb-admin-charts.min.js}" src="../module/js/sb-admin-charts.min.js"></script>
