--- a/src/main/resources/templates/locate/edit.html
+++ b/src/main/resources/templates/locate/edit.html
@@ -6,14 +6,8 @@
     <meta charset="UTF-8"/>
     <title>查看</title>
 
-    <link href="https://cdn.bootcss.com/twitter-bootstrap/4.3.1/css/bootstrap.css" rel="stylesheet">
-    <link th:href="@{~/module/vendor/bootstrap/css/bootstrap.min.css}"
-          href="../module/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link th:href="@{~/module/vendor/font-awesome/css/font-awesome.min.css}"
-          href="../module/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link th:href="@{~/module/vendor/datatables/dataTables.bootstrap4.css}"
-          href="../module/vendor/datatables/dataTables.bootstrap4.css" rel="stylesheet">
-    <link th:href="@{~/module/css/sb-admin.css}" href="../module/css/sb-admin.css" rel="stylesheet">
+    <!--公共css-->
+    <div th:include="common_css :: common_css"></div>
     <script th:src="@{~/module/vendor/jquery/jquery.min.js}" src="../module/vendor/jquery/jquery.min.js"></script>
 
 </head>
@@ -243,20 +237,8 @@
             </div>
         </div>
     </div>
-    <!-- Bootstrap core JavaScript-->
-    <script th:src="@{~/module/vendor/jquery/jquery.min.js}" src="../module/vendor/jquery/jquery.min.js"></script>
-    <script th:src="@{~/module/vendor/bootstrap/js/bootstrap.bundle.min.js}"
-            src="../module/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script th:src="@{~/module/vendor/jquery-easing/jquery.easing.min.js}"
-            src="../module/vendor/jquery-easing/jquery.easing.min.js"></script>
-    <script th:src="@{~/module/vendor/chart.js/Chart.min.js}" src="../module/vendor/chart.js/Chart.min.js"></script>
-    <script th:src="@{~/module/vendor/datatables/jquery.dataTables.js}"
-            src="../module/vendor/datatables/jquery.dataTables.js"></script>
-    <script th:src="@{~/module/vendor/datatables/dataTables.bootstrap4.js}"
-            src="../module/vendor/datatables/dataTables.bootstrap4.js"></script>
-    <script th:src="@{~/module/js/sb-admin.min.js}" src="../module/js/sb-admin.min.js"></script>
-    <script th:src="@{~/module/js/sb-admin-datatables.min.js}" src="../module/js/sb-admin-datatables.min.js"></script>
-    <script th:src="@{~/module/js/sb-admin-charts.min.js}" src="../module/js/sb-admin-charts.min.js"></script>
+    <!--公共js-->
+    <div th:include="common_js :: common_js"></div>
 </div>
 
 </body>
