--- a/src/main/resources/templates/mainframe.html
+++ b/src/main/resources/templates/mainframe.html
@@ -4,14 +4,8 @@
 
 <head>
     <meta charset="UTF-8"/>
-    <!-- Bootstrap core CSS-->
-    <link href="./module/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Custom fonts for this template-->
-    <link href="./module/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <!-- Page level plugin CSS-->
-    <link href="./module/vendor/datatables/dataTables.bootstrap4.css" rel="stylesheet">
-    <!-- Custom styles for this template-->
-    <link href="./module/css/sb-admin.css" rel="stylesheet">
+    <!--公共css-->
+    <div th:include="common_css :: common_css"></div>
 </head>
 <body class="fixed-nav sticky-footer bg-dark" id="page-top">
 <div th:fragment="common">
@@ -147,35 +141,22 @@
             </li>
         </ul>
         <ul class="navbar-nav ml-auto">
-            <li class="nav-item dropdown">
+            <li class="nav-item">
                 <!--<a class="nav-link  " id="messagesDropdown" href="#"  aria-haspopup="true" aria-expanded="false">-->
-                <a class="nav-link" th:text="${#dates.format(new java.util.Date().getTime(), 'yyyy-MM-dd')}"></a>
+                <a class="nav-link fa-calendar" th:text="${#dates.format(new java.util.Date().getTime(), 'yyyy-MM-dd')}"></a>
                 <!--</a>-->
             </li>
             <li class="nav-item">
-                <form class="form-inline my-2 my-lg-0 mr-lg-2">
-                    <div class="input-group">
-                        <input class="form-control" type="text" placeholder="Search for...">
-                        <span class="input-group-btn">
-                <button class="btn btn-primary" type="button">
-                  <i class="fa fa-search"></i>
-                </button>
-              </span>
-                    </div>
-                </form>
+                <a class="nav-link  fa-user " th:text="'用户'">
+                    用户：王松涛！></a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" data-toggle="modal" data-target="#exampleModal">
-                    <i class="fa fa-fw fa-sign-out"></i>Logout</a>
+                    <i class="fa fa-fw fa-sign-out"></i>注销</a>
             </li>
         </ul>
     </div>
 </nav>
-<!--<div class="content-wrapper">-->
-    <!--<div class="container-fluid">-->
-
-    <!--</div>-->
-<!--</div>-->
 
 </div>
 
