--- a/src/main/resources/templates/module/index.html
+++ b/src/main/resources/templates/module/index.html
@@ -9,14 +9,8 @@
   <meta name="description" content="">
   <meta name="author" content="">
   <title>门禁管理系统</title>
-  <!-- Bootstrap core CSS-->
-  <link href="../module/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <!-- Custom fonts for this template-->
-  <link href="../module/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-  <!-- Page level plugin CSS-->
-  <link href="../module/vendor/datatables/dataTables.bootstrap4.css" rel="stylesheet">
-  <!-- Custom styles for this template-->
-  <link href="../module/css/sb-admin.css" rel="stylesheet">
+  <!--公共css-->
+  <div th:include="common_css :: common_css"></div>
 </head>
 
 <body class="fixed-nav sticky-footer bg-dark" id="page-top">
@@ -69,20 +63,8 @@
         </div>
       </div>
     </div>
-    <!-- Bootstrap core JavaScript-->
-    <script src="../module/vendor/jquery/jquery.min.js"></script>
-    <script src="../module/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <!-- Core plugin JavaScript-->
-    <script src="../module/vendor/jquery-easing/jquery.easing.min.js"></script>
-    <!-- Page level plugin JavaScript-->
-    <script src="../module/vendor/chart.js/Chart.min.js"></script>
-    <script src="../module/vendor/datatables/jquery.dataTables.js"></script>
-    <script src="../module/vendor/datatables/dataTables.bootstrap4.js"></script>
-    <!-- Custom scripts for all pages-->
-    <script src="../module/js/sb-admin.min.js"></script>
-    <!-- Custom scripts for this page-->
-    <script src="../module/js/sb-admin-datatables.min.js"></script>
-    <script src="../module/js/sb-admin-charts.min.js"></script>
+    <!--公共js-->
+    <div th:include="common_js :: common_js"></div>
   </div>
 </body>
 
