--- a/src/main/resources/templates/users/view.html
+++ b/src/main/resources/templates/users/view.html
@@ -5,21 +5,8 @@
 <head>
     meta charset="UTF-8"/>
     <title>Thymeleaf in action</title>
-
-    <!--<link href="../module/css/sb-admin.css" rel="stylesheet" >-->
-    <!--<link href="https://cdn.bootcss.com/twitter-bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">-->
-    <!--<link href="https://cdn.bootcss.com/datatables/1.10.19/css/dataTables.bootstrap4.css" rel="stylesheet">-->
-    <link href="https://cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-
-    <link href="https://cdn.bootcss.com/twitter-bootstrap/4.3.1/css/bootstrap.css" rel="stylesheet">
-    <!-- Bootstrap core CSS-->
-    <link href="../module/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Custom fonts for this template-->
-    <!--<link href="../module/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">-->
-    <!-- Page level plugin CSS-->
-    <link href="../module/vendor/datatables/dataTables.bootstrap4.css" rel="stylesheet">
-    <!-- Custom styles for this template-->
-    <link href="../module/css/sb-admin.css" rel="stylesheet">
+    <!--公共css-->
+    <div th:include="common_css :: common_css"></div>
 </head>
 
 <body class="fixed-nav sticky-footer bg-dark" id="page-top">
@@ -108,30 +95,9 @@
             </div>
         </div>
     </div>
-    <!-- Bootstrap core JavaScript-->
-    <script src="../module/vendor/jquery/jquery.min.js"></script>
-    <script src="../module/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <!-- Core plugin JavaScript-->
-    <script src="../module/vendor/jquery-easing/jquery.easing.min.js"></script>
-    <!-- Page level plugin JavaScript-->
-    <script src="../module/vendor/chart.js/Chart.min.js"></script>
-    <script src="../module/vendor/datatables/jquery.dataTables.js"></script>
-    <script src="../module/vendor/datatables/dataTables.bootstrap4.js"></script>
-    <!-- Custom scripts for all pages-->
-    <script src="../module/js/sb-admin.min.js"></script>
-    <!-- Custom scripts for this page-->
-    <script src="../module/js/sb-admin-datatables.min.js"></script>
-    <script src="../module/js/sb-admin-charts.min.js"></script>
+    <!--公共js-->
+    <div th:include="common_js :: common_js"></div>
 </div>
-
-<!--<div th:replace="~{fragments/header :: header}"></div>-->
-<div>
-
-</div>
-<!--<div th:replace="~{fragments/footer :: footer}"></div>-->
-
-
-
 
 </body>
 
