--- a/src/main/resources/templates/whitelist/list.html
+++ b/src/main/resources/templates/whitelist/list.html
@@ -3,11 +3,8 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
 <head>
-    <link  href="https://cdn.bootcss.com/twitter-bootstrap/4.3.1/css/bootstrap.css" rel="stylesheet">
-    <link th:href="@{~/module/vendor/bootstrap/css/bootstrap.min.css}" href="../module/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link th:href="@{~/module/vendor/font-awesome/css/font-awesome.min.css}" href="../module/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link th:href="@{~/module/vendor/datatables/dataTables.bootstrap4.css}" href="../module/vendor/datatables/dataTables.bootstrap4.css" rel="stylesheet">
-    <link th:href="@{~/module/css/sb-admin.css}" href="../module/css/sb-admin.css" rel="stylesheet">
+    <!--公共css-->
+    <div th:include="common_css :: common_css"></div>
     <meta charset="UTF-8">
     <title>白名单管理</title>
 </head>
@@ -89,20 +86,8 @@
             </div>
         </div>
     </div>
-    <!-- Bootstrap core JavaScript-->
-    <script src="../module/vendor/jquery/jquery.min.js"></script>
-    <script src="../module/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <!-- Core plugin JavaScript-->
-    <script src="../module/vendor/jquery-easing/jquery.easing.min.js"></script>
-    <!-- Page level plugin JavaScript-->
-    <script src="../module/vendor/chart.js/Chart.min.js"></script>
-    <script src="../module/vendor/datatables/jquery.dataTables.js"></script>
-    <script src="../module/vendor/datatables/dataTables.bootstrap4.js"></script>
-    <!-- Custom scripts for all pages-->
-    <script src="../module/js/sb-admin.min.js"></script>
-    <!-- Custom scripts for this page-->
-    <script src="../module/js/sb-admin-datatables.min.js"></script>
-    <script src="../module/js/sb-admin-charts.min.js"></script>
+    <!--公共js-->
+    <div th:include="common_js :: common_js"></div>
 </div>
 
 </body>
