角色管理  列表

--- a/src/main/resources/templates/mainframe.html
+++ b/src/main/resources/templates/mainframe.html
@@ -25,7 +25,10 @@
 
                 <ul class="sidenav-second-level collapse" id="second">
                     <li>
-                        <a href="#">二级导航</a>
+                        <a href="./role/list.html" th:href="@{~/role/list}">角色管理</a>
+                    </li>
+                    <li>
+                        <a href="./role/add.html" th:href="@{~/role/list}">角色添加</a>
                     </li>
                 </ul>
 
@@ -48,7 +51,7 @@
             </li>
             <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Tables">
                 <a class="nav-link nav-link-collapse collapsed" data-toggle="collapse" href="#collapseComponents2">
-                    <i class="fa fa-fw fa-user"></i>
+                    <i class="fa fa-fw fa-floppy-o"></i>
                     <span class="nav-link-text">白名单管理</span>
                 </a>
 
@@ -77,60 +80,20 @@
             </li>
             <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Example Pages">
                 <a class="nav-link nav-link-collapse collapsed" data-toggle="collapse" href="#collapseExamplePages" data-parent="#exampleAccordion">
-                    <i class="fa fa-fw fa-file"></i>
-                    <span class="nav-link-text">流水查询</span>
+                    <i class="fa fa-fw fa-user"></i>
+                    <span class="nav-link-text">流水信息管理</span>
                 </a>
                 <ul class="sidenav-second-level collapse" id="collapseExamplePages">
                     <li>
-                        <a href="login.html">Login Page</a>
+                        <a href="#">流水信息查询</a>
                     </li>
                     <li>
-                        <a href="register.html">Registration Page</a>
+                        <a href="#">门禁流水统计</a>
                     </li>
                     <li>
-                        <a href="forgot-password.html">Forgot Password Page</a>
-                    </li>
-                    <li>
-                        <a href="blank.html">Blank Page</a>
+                        <a href="#">个人流水查询</a>
                     </li>
                 </ul>
-            </li>
-            <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Menu Levels">
-                <a class="nav-link nav-link-collapse collapsed" data-toggle="collapse" href="#collapseMulti" data-parent="#exampleAccordion">
-                    <i class="fa fa-fw fa-sitemap"></i>
-                    <span class="nav-link-text">Menu Levels</span>
-                </a>
-                <ul class="sidenav-second-level collapse" id="collapseMulti">
-                    <li>
-                        <a href="#">Second Level Item</a>
-                    </li>
-                    <li>
-                        <a href="#">Second Level Item</a>
-                    </li>
-                    <li>
-                        <a href="#">Second Level Item</a>
-                    </li>
-                    <li>
-                        <a class="nav-link-collapse collapsed" data-toggle="collapse" href="#collapseMulti2">Third Level</a>
-                        <ul class="sidenav-third-level collapse" id="collapseMulti2">
-                            <li>
-                                <a href="#">Third Level Item</a>
-                            </li>
-                            <li>
-                                <a href="#">Third Level Item</a>
-                            </li>
-                            <li>
-                                <a href="#">Third Level Item</a>
-                            </li>
-                        </ul>
-                    </li>
-                </ul>
-            </li>
-            <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Link">
-                <a class="nav-link" href="#">
-                    <i class="fa fa-fw fa-link"></i>
-                    <span class="nav-link-text">Link</span>
-                </a>
             </li>
         </ul>
         <ul class="navbar-nav sidenav-toggler">
