--- a/src/main/resources/templates/record/list.html
+++ b/src/main/resources/templates/record/list.html
@@ -3,11 +3,7 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
 <head>
-    <link  href="https://cdn.bootcss.com/twitter-bootstrap/4.3.1/css/bootstrap.css" rel="stylesheet">
-    <link th:href="@{~/module/vendor/bootstrap/css/bootstrap.min.css}" href="../module/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link th:href="@{~/module/vendor/font-awesome/css/font-awesome.min.css}" href="../module/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link th:href="@{~/module/vendor/datatables/dataTables.bootstrap4.css}" href="../module/vendor/datatables/dataTables.bootstrap4.css" rel="stylesheet">
-    <link th:href="@{~/module/css/sb-admin.css}" href="../module/css/sb-admin.css" rel="stylesheet">
+    <div th:include="common_cs :: common_cs"/>
     <meta charset="UTF-8">
     <title>流水管理</title>
 </head>
@@ -92,16 +88,7 @@
             </div>
         </div>
     </div>
-    <!-- Bootstrap core JavaScript-->
-    <script th:src="@{~/module/vendor/jquery/jquery.min.js}" src="../module/vendor/jquery/jquery.min.js"></script>
-    <script th:src="@{~/module/vendor/bootstrap/js/bootstrap.bundle.min.js}" src="../module/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script th:src="@{~/module/vendor/jquery-easing/jquery-easing.min.js}" src="../module/vendor/jquery-easing/jquery.easing.min.js"></script>
-    <script th:src="@{~/module/vendor/chart.js/Chart.min.js}" src="../module/vendor/chart.js/Chart.min.js"></script>
-    <script th:src="@{~/module/vendor/datatables/jquery.dataTables.js}" src="../module/vendor/datatables/jquery.dataTables.js"></script>
-    <script th:src="@{~/module/vendor/datatables/dataTables.bootstrap4.js}" src="../module/vendor/datatables/dataTables.bootstrap4.js"></script>
-    <script th:src="@{~/module/js/sb-admin.min.js}" src="../module/js/sb-admin.min.js"></script>
-    <script th:src="@{~/module/js/sb-admin-datatables.min.js}" src="../module/js/sb-admin-datatables.min.js"></script>
-    <script th:src="@{~/module/js/sb-admin-charts.min.js}" src="../module/js/sb-admin-charts.min.js"></script>
+    <div th:include="common_js :: common_js"></div>
 </div>
 
 </body>
