角色管理  列表

--- a/src/main/resources/templates/mainframe.html
+++ b/src/main/resources/templates/mainframe.html
@@ -28,7 +28,7 @@
                         <a href="./role/list.html" th:href="@{~/role/list}">角色管理</a>
                     </li>
                     <li>
-                        <a href="./role/add.html" th:href="@{~/role/list}">角色添加</a>
+                        <a href="./role/add.html" th:href="@{~/role/add}">角色添加</a>
                     </li>
                 </ul>
 
