--- a/src/main/resources/templates/role/add.html
+++ b/src/main/resources/templates/role/add.html
@@ -24,66 +24,18 @@
         </ol>
         <!-- Example DataTables Card-->
         <div class="card mb-3">
-            <div class="table-responsive">
-                <table class="table table-bordered text-center"  id="dataTable" width="100%" cellspacing="0">
-                    <thead>
-                    <tr>
-                        <td>角色</td>
-                        <td colspan="2">操作</td>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    <!--<tr th:if="${userModel.userList.size()} eq 0">-->
-                    <!--<td colspan="3">没有用户信息！</td>-->
-                    <!--</tr>-->
-                    <tr th:each="user : ${userModel.userList}">
-                        <td th:text="${user.cardid}"></td>
-                        <td th:text="${user.name}"></td>
-                        <div th:if="${user.sex} eq 1">
-                            <td>男</td>
-                        </div>
-                        <div th:if="${user.sex} eq 2">
-                            <td>女</td>
-                        </div>
-                        <td><a th:href="@{'/users/'+${user.cardid}}" th:text="查看"></a></td>
-                    </tr>
-
-                    </tbody>
-                </table>
-            </div>
+            <input type="text" class="form-control" placeholder="新增角色">
         </div>
-        <div class="card-footer small text-muted" th:text="${#dates.format(#dates.createNow(), 'dd MMM yyyy HH:mm')}" >版权保留xjtuse</div>
+        <div class="card mb-3">
+
+
+            <button type="submit" class="btn btn-success"  value="添加" th:text="添加"/>
+        </div>
     </div>
 </div>
-<!-- /.container-fluid-->
-<!-- /.content-wrapper-->
-<footer class="sticky-footer">
-    <div class="container">
-    </div>
-</footer>
-<!-- Scroll to Top Button-->
 <a class="scroll-to-top rounded" href="#page-top">
     <i class="fa fa-angle-up"></i>
 </a>
-<!-- Logout Modal-->
-<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Ready to Leave?</h5>
-                <button class="close" type="button" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">×</span>
-                </button>
-            </div>
-            <div class="modal-body">Select "Logout" below if you are ready to end your current session.</div>
-            <div class="modal-footer">
-                <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-                <a class="btn btn-primary" href="login.html">Logout</a>
-            </div>
-        </div>
-    </div>
-</div>
-
 <!--公共js-->
 <div th:include="common_js :: common_js"></div>
 </body>
