--- a/src/main/resources/templates/mainframe.html
+++ b/src/main/resources/templates/mainframe.html
@@ -30,6 +30,9 @@
                     <li>
                         <a href="./role/add.html" th:href="@{~/role/add}">角色添加</a>
                     </li>
+                    <li>
+                        <a href="./department/add.html" th:href="@{~/department/add}">学院（部门）管理</a>
+                    </li>
                 </ul>
 
             </li>
@@ -85,7 +88,7 @@
                 </a>
                 <ul class="sidenav-second-level collapse" id="collapseExamplePages">
                     <li>
-                        <a href="#">流水信息查询</a>
+                        <a href="./record/search.html" th:href="@{~/record/show_search}">流水信息查询</a>
                     </li>
                     <li>
                         <a href="#">门禁流水统计</a>
