一些小的修改

--- a/src/main/resources/templates/mainframe.html
+++ b/src/main/resources/templates/mainframe.html
@@ -27,9 +27,9 @@
                     <li>
                         <a href="./role/list.html" th:href="@{~/role/list}">角色管理</a>
                     </li>
-                    <li>
-                        <a href="./role/add.html" th:href="@{~/role/add}">角色添加</a>
-                    </li>
+                    <!--<li>-->
+                        <!--<a href="./role/add.html" th:href="@{~/role/add}">角色添加</a>-->
+                    <!--</li>-->
                     <li>
                         <a href="./department/add.html" th:href="@{~/department/add}">学院（部门）管理</a>
                     </li>
