--- a/src/main/resources/templates/role/list.html
+++ b/src/main/resources/templates/role/list.html
@@ -22,8 +22,16 @@
             </li>
             <li class="breadcrumb-item active" th:text="${roleModel.subtitle}">信息查询</li>
         </ol>
-        <!-- Example DataTables Card-->
         <div class="card mb-3">
+            <form action="/role/save" method="post" th:action="@{~/role/save}">
+                <div class="col-md-12 text-center column">
+                    <input type="text" style="width: auto" name="role" class="form-group" placeholder="新增角色">
+                    <button type="submit"  class="btn btn-group-sm btn-primary">确定</button>
+                </div>
+                <div>
+                    <p class="form-group" th:text="${roleModel.msg}" style="color: red"></p>
+                </div>
+            </form>
             <div class="table-responsive">
                 <table class="table table-bordered text-center"  id="dataTable" width="100%" cellspacing="0">
                     <thead>
