--- a/src/main/resources/templates/record/search.html
+++ b/src/main/resources/templates/record/search.html
@@ -12,13 +12,77 @@
 <div th:include="mainframe :: common"></div>
 <div class="content-wrapper">
     <div class="container-fluid">
-        <!-- Breadcrumbs-->
         <ol class="breadcrumb">
             <li class="breadcrumb-item">
                 <a href="#" th:text="${recordModel.title}">流水管理</a>
             </li>
             <li class="breadcrumb-item active" th:text="${recordModel.subtitle}">信息查询</li>
         </ol>
+
+
+        <div class="container">
+            <div class="row clearfix">
+                <div class="col-md-6 column">
+                    <form class="form-group" role="form" action="/record/search">
+                        <div class="form-group" style="width: auto">
+                            <div class="form-group" style="width: auto">
+                                <label for="third_locate" class="col-md-3 form-group">工作区</label>
+                                <input type="text" name="locate" class="form-group col-md-4"
+                                       id="third_locate"/>
+                            </div>
+                        </div>
+                        <div class="form-group" style="width: auto">
+                            <label for="type" class="col-md-3 form-group">出入标志</label>
+                            <input style="width: auto" type="text" col-md-3 name="type" class="form-group col-md-4"
+                                   id="type"/>
+                        </div>
+
+                        <div class="form-group" style="width: auto">
+                            <label for="role" class="col-md-3 form-group">身份</label>
+                            <input style="width: auto" type="text" name="role" class="form-group col-md-4" id="role"/>
+                        </div>
+                        <div class="form-group" style="width: auto">
+                            <label for="department" class="col-md-3 form-group">部门</label>
+                            <input style="width: auto" type="text" name="department" class="form-group col-md-4"
+                                   id="department"/>
+                        </div>
+                    </form>
+                </div>
+                <div class="col-md-6 column">
+                    <form class="form-group" role="form" action="/record/search">
+                        <div class="form-group" style="width: auto">
+                            <div class="form-group" style="width: auto">
+                                <label for="cardid" class="col-md-3 form-group">卡号</label>
+                                <input type="text" name="cardid" class="form-group col-md-4"
+                                       id="cardid"/>
+                            </div>
+                        </div>
+                        <div class="form-group" style="width: auto">
+                            <label for="time1" class="col-md-3 form-group">从时间</label>
+                            <input style="width: auto" type="date" col-md-3 name="time1" class="form-group col-md-4"
+                                   id="time1"/>
+                        </div>
+
+                        <div class="form-group" style="width: auto">
+                            <label for="time2" class="col-md-3 form-group">到时间</label>
+                            <input style="width: auto" type="date" name="time2" class="form-group col-md-4" id="time2"/>
+                        </div>
+                        <div class="form-group" style="width: auto">
+                            <label for="fid" class="col-md-3 form-group">考勤机名称</label>
+                            <input style="width: auto" type="text" name="fid" class="form-group col-md-4"
+                                   id="fid"/>
+                        </div>
+                    </form>
+                </div>
+                <div class="col-md-10 column text-xl-center">
+                        <button type="button" onclick="#" class="btn btn-default btn-warning form-group">查询</button>
+                        <button type="button" onclick="#" class="btn btn-default btn-warning form-group">重置</button>
+                </div>
+
+            </div>
+        </div>
+
+
         <div class="card mb-3">
             <div class="card-header">
                 <div class="card-body">
